# SCC5966-recommender-systems

./: .gitignore  README.md
1-items-collaborative-filtering/: Colaborative filtering (items) 2.ipynb  Colaborative filtering (items)-Copy1.ipynb  Colaborative filtering (items).ipynb  tests.ipynb
2-users-collaborative-filtering/: Collaborative filtering (users) 2.ipynb  Collaborative filtering (users) 3 precalculate sims.ipynb  Collaborative filtering (users).ipynb
3-baseline/: Implementation.ipynb
4-SVD/: new_svd.ipynb  svd.ipynb  test_cupy.ipynb  test_linalg.ipynb
5.1-GD-SVD/: fit_svd.ipynb  tests.ipynb  train.ipynb
5.2-FunkSVD/: Tests.ipynb  cpu_funk_svd-fine-tune.ipynb  cpu_funk_svd-state.ipynb  cpu_funk_svd.ipynb  fit_funk_svd.ipynb  fit_funk_svd_validation.ipynb  funk_svd_joblib.ipynb  raw_cpu_svd.ipynb
5.3-SVD++/: cpu_svd++.ipynb  cpu_svd++2.ipynb  cpu_svd++joblib.ipynb  cpu_svd++mask_matrix.ipynb
5.4-gSVD++/: cpu_gsvd++.ipynb
6-FBC-KNN-genres/: FBC-KNN-Genres.ipynb
7-FBC-KNN-Reviews/: fbc-knn-reviews-fixed.ipynb  fbc-knn-reviews.ipynb
8-LinearCBF/: linear_cbf_genres.ipynb
9-Hibrid/: CombineTwoModels.ipynb  OptimizeFBC.ipynb  PreprocessFBC.ipynb  fbc_funcs.py  svd_funcs.py  tests.ipynb
Project-NeuMF/: data_loading.ipynb  model-onehot.ipynb  models.ipynb  pretrain_test.ipynb  split_dataset.ipynb  train_model-copy.ipynb  train_model-dot.ipynb  train_model.ipynb  train_official_dot-multiple.ipynb  train_official_dot.ipynb  train_official_multiple.ipynb
ProjectFood/: project_tasks  (+1 more)
ProjectFood/evaluate_models/user_knn/: CMakeLists.txt  main.cpp
(+64 files in other folders)
